created page of the post and render list of posts at home page

--- a/example/src/content/blog/first-post.mdx
+++ b/example/src/content/blog/first-post.mdx
@@ -1,9 +1,10 @@
 ---
-slug: "/blog/greetings"
+slug: "first-post"
 date: "10-01-2021"
-title: "Greetings"
+title: "First Post"
+image: "../../images/astronomical-clocks.jpg"
 ---
 
-# Greetings
+## First Post
 
 Deserunt id laboris est et culpa nisi pariatur nulla anim proident commodo amet ullamco sit. Non proident labore ullamco cupidatat eu in ullamco non ex laboris in. Consectetur mollit reprehenderit quis enim sint. Esse do pariatur adipisicing eiusmod dolore.
