change view of home page and blog page

--- a/example/src/site/short-about.mdx
+++ b/example/src/site/short-about.mdx
@@ -2,6 +2,10 @@
 key: "short-about"
 ---
 
+<div className="avatar-wrapper">
+  <img src="../images/avatar.jpg" alt="avatar" />
+</div>
+
 Hi! I am Max, a software developer 👋
 
 Et consequat irure enim velit sunt reprehenderit dolore. Irure esse occaecat eiusmod commodo ad mollit veniam reprehenderit aliqua ullamco veniam elit enim. Amet nulla ullamco cupidatat velit ex irure proident.
